--- a/.github/workflows/CheckMarkdownLinks.yml
+++ b/.github/workflows/CheckMarkdownLinks.yml
@@ -8,7 +8,13 @@ on:
     # Modify the cron time to a somewhat random day/time to avoid having all your repos running at the same time
     # Run 4th day of every month at 4:41 AM (See https://pubs.opengroup.org/onlinepubs/9699919799/utilities/crontab.html#tag_20_25_07)
     - cron: "37 4 4 * *"
-
+  workflow_dispatch:
+    inputs:
+      message:
+        description: Message to display in job summary
+        required: false
+        type: string
+  
 jobs:
   markdown-link-check:
     runs-on: ubuntu-latest
@@ -18,4 +24,9 @@ jobs:
       with:
         base-branch: main
         use-verbose-mode: yes
-            
+        # config file is used to flag additional HTTP result codes as a valid "alive" result
+        config-file: './.github/workflows/mlc_config.json'           
+    - name: Print the job summary
+      if: ${{ inputs.message }}
+      run: |
+        echo ${{ inputs.message }} >$GITHUB_STEP_SUMMARY            
